<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:cardElevation="10dp">

    <TextView
        android:id="@+id/invalidDataMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/montaga"
        android:gravity="center"
        android:text="@string/invalid_phone"
        android:textColor="@color/colorInvalidData"
        android:textSize="15sp"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/montaga"
            android:gravity="center"
            android:text="@string/reconstruction"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/numberPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:digits="@string/format_phone"
            android:fontFamily="@font/montaga"
            android:hint="@string/number_phone"
            android:inputType="phone"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="25sp"
            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelPadding="4dp"
            app:met_maxCharacters="18"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true" />

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/button_registration"
            android:text="@string/sent_login_pass"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/singIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montaga"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>



