<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montez"
            android:text="@string/sign_in_app"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_in_text_bottom"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="25dp"
        android:layout_above="@+id/text_sign_in"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_sign_in"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/button_sign_in"
            android:layout_marginRight="6dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/button_registration"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btn_text_registration"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>
</RelativeLayout>