<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    app:cardElevation="10dp">

    <TextView
        android:id="@+id/invalidData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/montaga"
        android:gravity="center"
        android:text="@string/invalid_data"
        android:textColor="@color/colorInvalidData"
        android:textSize="15dp"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montaga"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/montaga"
            android:hint="@string/login_field"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="25sp"
            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelPadding="4dp"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/passField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/montaga"
            android:hint="@string/pass_field"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="25sp"
            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelPadding="4dp"
            app:met_minCharacters="5"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true" />

        <Button
            android:id="@+id/layout_registration_btn_registration"
            android:layout_width="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_sign_in"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/sign_in_registration"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montaga"
                android:gravity="center"
                android:text="@string/btn_text_registration"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/textExistAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montaga"
                android:gravity="center"
                android:text="@string/forgotten_data"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>